Removed excessive hyphens in html

--- a/htmlandcss/social-proof-section-master/social-proof-section.html
+++ b/htmlandcss/social-proof-section-master/social-proof-section.html
@@ -25,7 +25,7 @@
     <main>
       <!--<div class="svgtop"></div>
     <div class="svgbottom"></div>-->
-      <!--start of row one-------------------------->
+      <!--start of row one-->
       <div class="row-one-container">
         <header class="row-one">
           <h1>10,000+ of our users love our products.</h1>
@@ -62,7 +62,7 @@
       </div>
 
 
-      <!--start of row two--------------------->
+      <!--start of row two-->
       <div class="row-two-container">
         <div class="row-two">
           <span class="img-text"><img class="buyer-pic" src="./images/image-colton.jpg" alt="picture of colton smith" /></span>
