changed sections back to div due to validation issues

--- a/htmlandcss/social-proof-section-master/social-proof-section.html
+++ b/htmlandcss/social-proof-section-master/social-proof-section.html
@@ -33,7 +33,7 @@
           <p>We only provide great products combined with excellent customer service.
             See what our satisfied customers are saying about our services.</p>
         </header>
-        <section class="row-one" title="five star ratings">
+        <div class="row-one" title="five star ratings">
           <div class="stars">
             <span><img src="./images/icon-star.svg" alt="one star" />
               <img src="./images/icon-star.svg" alt="one star" />
@@ -58,12 +58,12 @@
               <img src="./images/icon-star.svg" alt="one star" /></span>
             <p><span>Rated 5 Stars in BestTech</span></p>
           </div>
-        </section>
+        </div>
       </div>
 
 
       <!-- row two -->
-      <section class="row-two-container" aria-label="customer reviews">
+      <div class="row-two-container" aria-label="customer reviews">
         <div class="row-two">
           <span class="img-text"><img class="buyer-pic" src="./images/image-colton.jpg" alt="picture of colton smith" /></span>
           <p class="img-text"><span>Colton Smith</span><br />
@@ -94,7 +94,7 @@
             "Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone! "</blockquote>
         </div>
-      </section>
+      </div>
     </main>
     <footer>
       <div class="attribution">
