--- a/htmlandcss/social-proof-section-master/social-proof-section.html
+++ b/htmlandcss/social-proof-section-master/social-proof-section.html
@@ -63,7 +63,7 @@
 
 
       <!-- row two -->
-      <div class="row-two-container" aria-label="customer reviews">
+      <div class="row-two-container" title="customer reviews">
         <div class="row-two">
           <span class="img-text"><img class="buyer-pic" src="./images/image-colton.jpg" alt="picture of colton smith" /></span>
           <p class="img-text"><span>Colton Smith</span><br />
